Add TopN handling