@@ -9,6 +9,7 @@ package org.elasticsearch.xpack.esql.action;
 
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.plugins.Plugin;
+import org.elasticsearch.test.junit.annotations.TestLogging;
 import org.elasticsearch.xpack.esql.VerificationException;
 import org.elasticsearch.xpack.esql.plan.logical.Enrich;
 
@@ -27,6 +28,7 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 
+@TestLogging(value = "org.elasticsearch.xpack.esql:TRACE", reason = "debug")
 public class CrossClusterEnrichIT extends AbstractEnrichBasedCrossClusterTestCase {
 
     @Override
@@ -403,7 +405,7 @@ public class CrossClusterEnrichIT extends AbstractEnrichBasedCrossClusterTestCas
             assertCCSExecutionInfoDetails(executionInfo);
         }
 
-        // No renames, no KEEP
+        // No renames, no KEEP - this is required to verify that ENRICH does not break sort with fields it overrides
         query = """
             FROM *:events,events
             | eval ip= TO_STR(host)
@@ -416,11 +418,11 @@ public class CrossClusterEnrichIT extends AbstractEnrichBasedCrossClusterTestCas
                 getValuesList(resp),
                 equalTo(
                     List.of(
-                        List.of("192.168.1.2", 1L, "andres", "192.168.1.2", "Windows", "192.168.1.2"),
-                        List.of("192.168.1.3", 1L, "matthew", "192.168.1.3", "MacOS", "192.168.1.3"),
-                        Arrays.asList("192.168.1.25", 1L, "park", (String) null, (String) null, "192.168.1.25"),
-                        List.of("192.168.1.5", 2L, "akio", "192.168.1.5", "Android", "192.168.1.5"),
-                        List.of("192.168.1.6", 2L, "sergio", "192.168.1.6", "iOS", "192.168.1.6")
+                        List.of("192.168.1.2", 1L, "andres", "192.168.1.2", "Windows"),
+                        List.of("192.168.1.3", 1L, "matthew", "192.168.1.3", "MacOS"),
+                        Arrays.asList("192.168.1.25", 1L, "park", (String) null, (String) null),
+                        List.of("192.168.1.5", 2L, "akio", "192.168.1.5", "Android"),
+                        List.of("192.168.1.6", 2L, "sergio", "192.168.1.6", "iOS")
                     )
                 )
             );
